# ada-types

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE
include/: CMakeLists.txt  ada_types.hpp  ada_types_fwd.hpp  arithmetic_operations.hpp  arithmetic_type.hpp  checked_arithmetic_operations.hpp  cina.cppm  cina.hpp  comparison.hpp  concepts.hpp  exceptions.hpp  signed_integer_type.hpp  streaming.hpp  strong_type_base.hpp  strong_types.hpp  type_factory.hpp
tests/: CMakeLists.txt  compile_check.cpp  test_bitwise_integer_type.cpp  test_boolean.cpp  test_callable.cpp  test_compilation_failures.cpp  test_integer_type.cpp  test_pointer_type.cpp  test_signed_integer.cpp  test_signed_integer_type.cpp  test_strong_type.cpp  test_strong_type_base.cpp  test_type_factory.cpp  test_types.hpp  test_vector_like_container.cpp
