find_package(GTest REQUIRED)

add_executable(test_boolean test_boolean.cpp)
if (BUILD_MODULE)
    target_compile_definitions(test_boolean PRIVATE BUILD_MODULE)
endif()
target_link_libraries(test_boolean PRIVATE ${PROJECT_NAME} GTest::gtest_main)
gtest_discover_tests(test_boolean)

add_executable(test_callable test_callable.cpp)
if (BUILD_MODULE)
    target_compile_definitions(test_callable PRIVATE BUILD_MODULE)
endif()
target_link_libraries(test_callable PRIVATE ${PROJECT_NAME} GTest::gtest_main)
gtest_discover_tests(test_callable)

add_executable(test_integer_type test_integer_type.cpp)
if (BUILD_MODULE)
    target_compile_definitions(test_integer_type PRIVATE BUILD_MODULE)
endif()
target_link_libraries(test_integer_type PRIVATE ${PROJECT_NAME} GTest::gtest_main)
gtest_discover_tests(test_integer_type)

add_executable(test_bitwise_integer_type test_bitwise_integer_type.cpp)
if (BUILD_MODULE)
    target_compile_definitions(test_bitwise_integer_type PRIVATE BUILD_MODULE)
endif()
target_link_libraries(test_bitwise_integer_type PRIVATE ${PROJECT_NAME} GTest::gtest_main)
gtest_discover_tests(test_bitwise_integer_type)

add_executable(test_pointer_type test_pointer_type.cpp)
if (BUILD_MODULE)
    target_compile_definitions(test_pointer_type PRIVATE BUILD_MODULE)
endif()
target_link_libraries(test_pointer_type PRIVATE ${PROJECT_NAME} GTest::gtest_main)
gtest_discover_tests(test_pointer_type)

add_executable(test_strong_type_base test_strong_type_base.cpp)
if(BUILD_MODULE)
    target_compile_definitions(test_strong_type_base PRIVATE BUILD_MODULE)
endif()
target_link_libraries(test_strong_type_base PRIVATE ${PROJECT_NAME} GTest::gtest_main)
gtest_discover_tests(test_strong_type_base)

add_executable(test_vector_like_container test_vector_like_container.cpp)
if(BUILD_MODULE)
    target_compile_definitions(test_vector_like_container PRIVATE BUILD_MODULE)
endif()
target_link_libraries(test_vector_like_container PRIVATE ${PROJECT_NAME} GTest::gtest_main)
gtest_discover_tests(test_vector_like_container)
